# dj-git-indexer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Acornfile  Dockerfile  README.md  devbox.json  entrypoint.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build_n_push.yaml
crawler/: settings.py  settings_test.py  urls.py
gcp/: README.md
gcp/bq/: schema.json
gcp/cloud_function/: main.py
indexer/: __init__.py  admin.py  apps.py  manage.py  models.py  sql.py  urls.py  utils.py  views.py  worker.py
indexer/indexer/: asgi.py  settings.py  urls.py  wsgi.py
indexer/management/commands/: index.py  mirror.py
indexer/migrations/: 0001_initial.py  0002_alter_mergerequest_source_sha_and_more.py  0002_commit_created_ts.py  0003_alter_repository_options.py  0004_mergerequest.py  0005_author_login_name.py
indexer/tests/: conftest.py  test_commands.py  test_models.py  test_search_page.py  test_utils.py  test_worker.py
scripts/: README.md  crontab.example  run_index.sh
templates/indexer/: base.html  commits.html  search.html
test_data/: test_db.json
tests/: test_git_indexer.py
