[tool.poetry]
name = "Git Indexer"
version = "0.9.0"
description = "Index git commits from various repositories and store them in a database for analysis. Built with Django."
authors = ["Li Lin <guru.lin@gmail.com>"]
license = "MIT"

# this section contains all dependencies required to run unit and integration tests
# not just dependencies requied for lambda runtime
[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
django = "^4.2.3"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.3"}
psutil = "^5.9.5"
pydriller = "^2.5"
python-gitlab = "^3.15.0"
pygithub = "^1.59.0"
storage = "^0.0.4.3"
google-cloud-storage = "^2.10.0"
django-bootstrap-v5 = "^1.0.11"
gunicorn = "^21.0.1"
dj-database-url = "^2.0.0"
django-extensions = "^3.2.3"
psycopg = {extras = ["binary", "pool"], version = "^3.1.12"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-mock = "^3.10"
pytest-cov = "^4.0"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-debugger = "^4.1.2"
flake8-fixme = "^1.1.1"
flake8-variables-names = "^0.0.5"
mypy = "1.4.1"
types-setuptools = "^57.4.8"
types-toml = "^0.10.3"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest-django = "^4.5.2"
types-google-cloud-ndb = "^2.1.0.7"
types-psutil = "^5.9.5.15"
pytest-dotenv = "^0.5.2"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--reuse-db"
DJANGO_SETTINGS_MODULE = "crawler.settings_test"
testpaths = [
    "Indexer/tests",
]
env_files = [
    ".env.test",
]

[tool.coverage.run]
source = ["."]
omit = ["**/tests/*", "crawler/*.py", "manage.py"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
mypy_path = "."
exclude = "gcp"

[mypy.plugins.django-stubs]
django_settings_module = "crawler.settings"

[[tool.mypy.overrides]]
module = [
    "dataclasses",
    "pydriller",
    "pydriller.git",
    "pydriller.domain.commit",

]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "crawler.settings"
strict_settings = false
